<resources>
    <string name="app_name" translatable="false">JUST JAVA</string>
    <string name="toppings">toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="order_button_text">Order</string>
    <string name="quantity">Quantity</string>
    <string name="decrement_button_text" translatable="false">-</string>
    <string name="increment_button_text" translatable="false">+</string>
    <string name="name_edittext_hint">Name</string>
</resources>
